--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,8 @@ hs_err_pid*
 
 .idea/
 jsConsumer/pacts/
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
