--- a/jsConsumer/package.json
+++ b/jsConsumer/package.json
@@ -7,14 +7,14 @@
     "url": "git://github.com/shavo007/pact-demo.git"
   },
   "devDependencies": {
-    "@pact-foundation/pact-node": "4.8.0",
+    "@pact-foundation/pact-node": "^4.8.3",
     "gulp": "^3.9.1",
     "jasmine": "^2.5.3",
     "jasmine-core": "^2.5.2",
-    "karma": "1.5.0",
+    "karma": "1.6.0",
     "karma-jasmine": "1.1.0",
     "karma-pact": "0.0.7",
-    "karma-phantomjs-launcher": "1.0.2",
+    "karma-phantomjs-launcher": "1.0.4",
     "pact": "^2.2.0"
   },
   "dependencies": {},
