--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '2'
+version: '2.1'
 services:
   postgres:
     image: shanelee007/docker-pact-postgres
@@ -7,6 +7,11 @@ services:
       -  POSTGRES_USER=admin
     ports:
       - "5433:5432"
+    healthcheck:
+      test: ["CMD-SHELL", "psql -h 'localhost' -U 'admin' -c '\\l'"]
+      interval: 30s
+      timeout: 30s
+      retries: 3
   pact:
     image: dius/pact-broker:latest
     environment:
@@ -19,5 +24,5 @@ services:
     ports:
       - "80:80"
     depends_on:
-        - postgres
-#    entrypoint: ./wait-for-it.sh postgres:5432 -- echo "postgres is up"
+        postgres:
+          condition: service_healthy
