--- a/kubernetes/pact-deployment.yaml
+++ b/kubernetes/pact-deployment.yaml
@@ -1,18 +1,37 @@
+apiVersion: v1
+kind: Service
+metadata:
+  name: pact
+  labels:
+    app: pact
+spec:
+  ports:
+    - port: 80
+  selector:
+    app: pact
+    tier: frontend
+  type: LoadBalancer
+---
+
+
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
+  name: pact
   creationTimestamp: null
   labels:
-    io.kompose.service: pact
-  name: pact
+    app: pact
+
 spec:
   replicas: 1
-  strategy: {}
+  strategy:
+    type: Recreate
   template:
     metadata:
       creationTimestamp: null
       labels:
-        io.kompose.service: pact
+        app: pact
+        tier: frontend
     spec:
       containers:
       - env:
@@ -21,7 +40,7 @@ spec:
         - name: PACT_BROKER_DATABASE_PASSWORD
           value: TheUserPassword
         - name: PACT_BROKER_DATABASE_HOST
-          value: postgres
+          value: pact-postgres
         - name: PACT_BROKER_DATABASE_USERNAME
           value: pactbrokeruser
         - name: PACT_BROKER_BASIC_AUTH_USERNAME
@@ -32,6 +51,4 @@ spec:
         name: pact
         ports:
         - containerPort: 80
-        resources: {}
       restartPolicy: Always
-status: {}
