--- a/kubernetes/postgres-deployment.yaml
+++ b/kubernetes/postgres-deployment.yaml
@@ -1,18 +1,34 @@
+apiVersion: v1
+kind: Service
+metadata:
+  name: pact-postgres
+  labels:
+    app: pact
+spec:
+  ports:
+    - port: 5432
+  selector:
+    app: pact
+    tier: postgres
+---
+
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
+  name: pact-postgres
   creationTimestamp: null
   labels:
-    io.kompose.service: postgres
-  name: postgres
+    app: pact
 spec:
   replicas: 1
-  strategy: {}
+  strategy:
+    type: Recreate
   template:
     metadata:
       creationTimestamp: null
       labels:
-        io.kompose.service: postgres
+        app: pact
+        tier: postgres
     spec:
       containers:
       - env:
@@ -26,4 +42,3 @@ spec:
         - containerPort: 5432
         resources: {}
       restartPolicy: Always
-status: {}
